@@ -166,31 +166,32 @@ const char* synce_strerror(DWORD error);
 
 /*
  * Info from the ~/.synce/active_connection file
- * written by (v)dccm, or obtained from odccm
+ * written by (v)dccm, or obtained over dbus from odccm or hal-dccm
  */
 
-typedef struct _SynceInfo
-{
-  pid_t dccm_pid;
-  char* ip;
-  char* password;
-  int key;
-  int os_version;
-  int os_minor;
-  int build_number;
-  int processor_type;
-  int partner_id_1;
-  int partner_id_2;
-  char* name;
-  char* os_name;
-  char* model;
-  char* transport;
-  int fd;
-} SynceInfo;
+typedef struct _SynceInfo SynceInfo;
 
 SynceInfo* synce_info_new(const char* device_name);
 void synce_info_destroy(SynceInfo* info);
 
+const char *synce_info_get_name(SynceInfo *info);
+bool synce_info_get_os_version(SynceInfo *info, int *os_major, int *os_minor);
+int synce_info_get_build_number(SynceInfo *info);
+int synce_info_get_processor_type(SynceInfo *info);
+const char *synce_info_get_os_name(SynceInfo *info);
+const char *synce_info_get_model(SynceInfo *info);
+
+const char *synce_info_get_device_ip(SynceInfo *info);
+const char *synce_info_get_local_ip(SynceInfo *info);
+
+int synce_info_get_partner_id_1(SynceInfo *info);
+int synce_info_get_partner_id_2(SynceInfo *info);
+
+int synce_info_get_fd(SynceInfo *info);
+pid_t synce_info_get_dccm_pid(SynceInfo *info);
+const char *synce_info_get_transport(SynceInfo *info);
+const char *synce_info_get_password(SynceInfo *info);
+int synce_info_get_key(SynceInfo *info);
 
 #ifdef __cplusplus
 }
